@@ -3,6 +3,7 @@
 	bugfix: work around array_fill_keys() from PHP 5.2 (ticket:278)
 	bugfix: delete real servers on RS pool deletion (ticket:233)
 	bugfix: "Same type, same tags" form was broken (ticket:279)
+	update: add more InnoDB foreign keys
 0.17.3	2009-08-08
 	update: even better search function (ticket:20)
 	update: suggest tag selector for new files and users (ticket:205)
